# perf-oriented-dev

./: .gitignore
larger_samples/npb_bt/: CMakeLists.txt
larger_samples/npb_bt/src/: bt.c  rhs.c  solve_subs.c  x_solve.c  y_solve.c  z_solve.c
larger_samples/ssca2/: CMakeLists.txt
scripts/: benchmark.py
small_samples/: CMakeLists.txt
small_samples/mmul/: mmul.c
solutions/: lcc3.sh
solutions/exercise1/: benchmark.py  config.yaml  generate_table.py  solution01.md
solutions/exercise1/benchmark/: delannoy.csv
solutions/exercise1/lcc3/: delannoy.csv  filegen.csv  filesearch.csv  mmul.csv  nbody.csv  qap.csv
solutions/exercise1/local/: filegen.csv  filesearch.csv  mmul.csv  nbody.csv  qap.csv
solutions/exercise2/: benchmark.py  config.yaml  exec_with_io_load.sh  loadgen_io  loadgen_io.c  plot.py  run_lcc3.sh
solutions/exercise2/benchmark/: delannoy.csv  filegen.csv  filesearch.csv  mmul.csv  nbody.csv  qap.csv
solutions/exercise2/local_external_load/: delannoy.csv  filesearch.csv
solutions/exercise2/local_no_load/: delannoy.csv  filegen.csv  filesearch.csv  mmul.csv  nbody.csv  qap.csv
solutions/exercise2/taskA/lcc3/: config.yaml
solutions/exercise2/taskA/lcc3/external_load/: delannoy.csv  filegen.csv  filesearch.csv  mmul.csv  nbody.csv  qap.csv
solutions/exercise2/taskA/lcc3/no_external_load/: delannoy.csv  filegen.csv  filesearch.csv  mmul.csv  nbody.csv  qap.csv
solutions/exercise2/taskA/local/: config.yaml
solutions/exercise2/taskA/local_external_load/: filegen.csv  mmul.csv
solutions/exercise2/taskB/: loadgeen_io  loadgen_io  loadgen_io.c  loadgen_io.py
solutions/exercise2/taskB/lcc3/: config.yaml
solutions/exercise2/taskB/local/: config.yaml
solutions/exercise3/: solution03.md
solutions/exercise3/npb_bt/: CMakeLists.txt
solutions/exercise3/npb_bt/src/: bt.c
solutions/exercise3/taskA/: gprof_s.txt
solutions/exercise3/taskA/lcc3/: gprof_a.txt
solutions/exercise3/taskA/local/: npb_bt_a.txt  npb_bt_b.txt  npb_bt_s.txt
solutions/exercise3/taskB/: config.yaml
solutions/exercise3/taskB/gprof/: npb_bt_a.csv  npb_bt_w.csv
solutions/exercise3/taskB/no_profiler/: npb_bt_a.csv  npb_bt_w.csv
solutions/exercise3/taskB/with_tracy/: npb_bt_a.csv  npb_bt_w.csv
solutions/exercise4/: benchmark.py  plot.py  solution.md
solutions/exercise4/taskA/npb_bt/: massif.out.3215243
solutions/exercise4/taskA/ssca/: massif.out.3217095
solutions/exercise4/taskB/: counters.py  counters_npb_bt.csv  counters_ssca2.csv  plot_counters.py  ratios_npb_bt.csv  ratios_ssca2.csv
solutions/exercise4/taskB/npb_bt/: config.yaml  counters_npb_bt.csv  npb_bt_w.csv
solutions/exercise4/taskB/ssca2/: config.yaml  counters_ssca2.csv
solutions/exercise5/: benchmark.py  solution05.md
solutions/exercise5/taskA/: config.yaml  delannoy.csv  mmul.csv  nbody.csv  npb_bt_w.csv  plot.py  qap.csv  ssca2.csv
solutions/exercise5/taskB/: benchmark_comp_opt.py  config.yaml  delannoy.csv  mmul.csv  nbody.csv  npb_bt_w.csv  plot.py  qap.csv  receive_option.py  ssca2.csv
solutions/exercise6/: solution.md
solutions/exercise6/taskA/: CMakeLists.txt  benchmark.py  config.yaml  lcc3.yaml  local.yaml  mmul.csv  mmul_failed.csv  plot_heatmap.py
solutions/exercise6/taskA/lcc3/: mmul.csv
solutions/exercise6/taskA/local/: mmul.csv
solutions/exercise6/taskA/mmul/: mmul.c
solutions/exercise6/taskB/: CMakeLists.txt  cache_latency.csv  cache_latency.py  out.csv  plot.py
solutions/exercise6/taskB/benchmark/: cache_benchmark.c
solutions/exercise6/taskB/lcc3/: out.csv
solutions/exercise6/taskB/local/: out.csv
tools/load_generator/: exec_with_workstation_heavy.sh  loadgen.c  loadutils.c
(+23 files in other folders)
