cmake_minimum_required(VERSION 3.10)
project(perf_oriented_prog_samples)

set_property(GLOBAL PROPERTY C_STANDARD 11)

if(MSVC)
  add_compile_options(/W4 /WX)
else()
  add_compile_options(-Wall -Wextra -Wpedantic -Werror -O2)
endif()

if(NOT DEFINED S)
  set(S 2048)
endif()
if(NOT DEFINED M_T)
  set(M_T 2048)
endif()
if(NOT DEFINED N_T)
  set(N_T 2048)
endif()
if(NOT DEFINED K_T)
  set(K_T 2048)
endif()

add_executable(mmul mmul/mmul.c)

target_compile_definitions(mmul PRIVATE S=${S})
target_compile_definitions(mmul PRIVATE M_T=${M_T})
target_compile_definitions(mmul PRIVATE N_T=${N_T})
target_compile_definitions(mmul PRIVATE K_T=${K_T})